Fix scrollbars

--- a/app/assets/stylesheets/components/scratchpad.css.scss
+++ b/app/assets/stylesheets/components/scratchpad.css.scss
@@ -58,7 +58,7 @@
 
 .scratchpad-panel {
   overflow: scroll;
-  height: 100%;
+  height: calc(100vh - var(--d-navbar-height));
   padding: var(--d-card-supporting-text-padding);
 }
 
